# iciba

./: README.md  pyproject.toml
iciba/: __main__.py
